--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  box-sizing: border-box;
+}
+
+*, *:before, *:after{
+  box-sizing: inherit;
 }
 
 /**
@@ -436,31 +441,53 @@ th {
 }
 
 .top-navigation > .content {
-  width: 970px;
-  height: 70px;
+  width: 60rem;
+  height: 4.375rem;
   margin: 0 auto;
+  padding: 0 1em;
 }
 
 .logo{
-
+  margin-top: 1em;
 }
 
-.Navigation {
+.top-navigation .links {
+  font-family: 'Roboto' , sans-serif;
+  font-size: 1em;
+  color: #838994;
+  letter-spacing: 0.03em;
   list-style-type: none;
-  text-align: right;
+  float: right;
+  margin-top: 1.7em;
+  -webkit-font-smoothing: antialiased;
 
 
 }
-.Navigation li{
-  display: inline;
-  padding-right: 0;
+
+.top-navigation .links li{
+  display: inline-block;
+  margin-left: 1.7em;
 }
 
+.top-navigation .links .active {
+  color: #4c5058;
+  font-weight: 500;
+}
 
+.top-navigation .links li:hover {
+  cursor: pointer;
+  color: #333333;
+}
 
+/* Image Section */
 
-
-
+.introduction {
+  background-image: url('../images/first-background.jpg');
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 45.938rem;
+}
 
 
 
